# -*- Makefile -*-
#
# Copyright (c)      2008  Sandia Corporation
#

SUBDIRS = qthread

noinst_HEADERS = \
	osx_compat/taskimpl.h \
	osx_compat/power-ucontext.h \
	osx_compat/386-ucontext.h \
	osx_compat/tile-ucontext.h \
	qthread_innards.h \
	qloop_innards.h \
	qthread_asserts.h \
	qthread_expect.h \
	qt_atomics.h \
	qt_barrier.h \
	qt_hash.h \
	qt_gcd.h \
	qt_mpool.h \
	rose_xomp.h \
	rose_log_arrivaldetector.h \
	futurelib_innards.h
