SUBDIRS = blackscholes microbench-porting cholesky fib primes matrixinvert routing filesystem reduction

.PHONY: build test

build: all
	@echo "Finished making samples!"

test: check
	@echo "Finished testing samples!"

all:
	@echo "Finished making samples!"

clean-local:
	@echo "Finished cleaning samples!"
